# deckfile

./: .gitignore  Cargo.toml  README.md  deckfile.rhai.example  deckfile.yaml.example  flake.nix
examples/: tap-test.slint  voice.slint
src/: config.rs  daemon.rs  lib.rs  main.rs  render.rs  slint_screen.rs
tests/: slint_integration.rs
